calendar auto sizing

--- a/public/info.html
+++ b/public/info.html
@@ -110,6 +110,7 @@
           footerToolbar: {
             right: "prev,next",
           },
+          height: "auto",
           displayEventTime: false,
           eventDidMount: (info) => {
             tippy(info.el, {
